--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./css/backend.css">
   <link rel="stylesheet" type="text/css" href="./css/nav.css">
   <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/roulette.css">
 
   <script type="text/javascript" src="./js/jquery.js"></script>
   <script type="text/javascript" src="./js/cssbackend.js"></script>
@@ -45,8 +46,9 @@
             </a>
             <ul class="dropdown-menu">
               <li><a href="#">Bomb</a></li>
-              <li><a href="/cups">Roullete</a></li>
+              <li><a href="/roulette">Roullete</a></li>
               <li><a href="#">Crash</a></li>
+              <li><a href="/cups">Cups</a></li>
             </ul>
           </li>
           <li><a href="/deposit">Deposit</a></li>
