--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,12 +10,14 @@
   <link rel="stylesheet" type="text/css" href="./css/roulette.css">
 
   <script type="text/javascript" src="./js/jquery.js"></script>
+  <script type="text/javascript" src="./js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="./js/cssbackend.js"></script>
   <script type="text/javascript" src="./socket.io/socket.io.js"></script>
   <script type="text/javascript" src="./js/moment.js"></script>
   <script type="text/javascript" src="./js/moment-timezone.min.js"></script>
   <script type="text/javascript" src="./js/jquery.countdown.min.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="./js/roulette.js"></script>
 </head>
 <body>
   <!-- Navbar -->
@@ -45,10 +47,10 @@
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="#">Bomb</a></li>
+              <li><a href="/">Bomb</a></li>
               <li><a href="/roulette">Roullete</a></li>
-              <li><a href="#">Crash</a></li>
-              <li><a href="/cups">Cups</a></li>
+              <li><a href="/crash">Crash</a></li>
+              <!--<li><a href="/cups">Cups</a></li>-->
             </ul>
           </li>
           <li><a href="/deposit">Deposit</a></li>
