--- a/views/cups.hbs
+++ b/views/cups.hbs
@@ -1,6 +1,6 @@
 <div class="row">
 
-  <div class="col-sm-8 main">
+  <div class="col-sm-9 main">
     <div class="alert alert-danger error" style='display: none;'>
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
       <strong>Error!</strong>
@@ -96,32 +96,33 @@
     <br><br>
   </div>
   
-  <div class="col-sm-1">
-    <br>
-  </div>
-
   <div class='col-sm-3 module chat_module'>
     <h4 style='margin: 0px; text-align: center; padding-top: 3px;'>
-      <b style='color: #E87164'>Users Online:</b> <span class='online'>30</span>
+      <b style='color: #2ecc71'>Users Online:</b> <span class='online'>30</span>
     </h4>
     <hr>
     <div class='messages' id='messages'>
       <div class='message'>
-        <b class='chat_username'>TripleSkins:</b>
+        <b class='chat_username'>CSGO:</b>
           <p class='content'>
-            Welcome to TripleSkins: torgloi,<br> we hope that you enjoy your stay.
+            Welcome to CSGO: torgloi,<br> we hope that you enjoy your stay.
           </p>
       </div>
       <hr>
     </div>
 
-    <div action="" method="POST" class="form-inline" role="form">  
-      <input type="text" class="form-control chat_input" style='width: 100%;' placeholder="Message: Press Enter to Send">
-    </div>
+    <from action="" method="POST" class="form-inline" role="form">  
+      <div class="input-group">
+        <input type="text" class="form-control chat_input" style='width: 100%;' placeholder="Press Enter to Send" >
+        <span class="input-group-btn">
+          <button class="btn btn-danger chat_submit" type="button">Send</button>
+        </span>
+      </div>
+    </form>
   </div>
 </div>
 
 <div class='identifier' style='display: none;'>{{user.identifier}}</div>
 <div class='secret' style='display: none;'></div>
-<div class='username' style='display: none;'></div>
-<div class='link' style='display: none;'></div>
+<div class='username' style='display: none;'>{{user.displayName}}</div>
+<div class='link' style='display: none;'>{{user._json.profileurl}}</div>
