--- a/views/cups.hbs
+++ b/views/cups.hbs
@@ -122,7 +122,9 @@
   </div>
 </div>
 
-<div class='identifier' style='display: none;'>{{user.identifier}}</div>
-<div class='secret' style='display: none;'></div>
-<div class='username' style='display: none;'>{{user.displayName}}</div>
-<div class='link' style='display: none;'>{{user._json.profileurl}}</div>
+<div id='identifier' style='display: none;'>{{user.identifier}}</div>
+<div id='id' style='display: none;'>{{user.id}}</div>
+<div id='secret' style='display: none;'></div>
+<div id='username' style='display: none;'>{{user.displayName}}</div>
+<div id='link' style='display: none;'>{{user._json.profileurl}}</div>
+<div id='avatar' style='display: none;'>{{user.photos.2.value}}</div>
