--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="./js/moment.js"></script>
   <script type="text/javascript" src="./js/moment-timezone.min.js"></script>
   <script type="text/javascript" src="./js/jquery.countdown.min.js"></script>
+  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinysort/2.3.6/jquery.tinysort.min.js"></script>-->
   <script type="text/javascript" src="./js/main.js"></script>
   <script type="text/javascript" src="./js/roulette.js"></script>
 </head>
@@ -58,7 +59,7 @@
           {{#if user}}
             <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                <img style="width: 30px; margin-top: -5px; margin-right: 5px; border-radius: 25px;" src="{{user._json.avatar}}"> {{user.displayName}}
+                <img style="width: 30px; margin-top: -5px; margin-right: 5px; border-radius: 25px;" src="{{user.photos.2.value}}"> {{user.displayName}}
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
