--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="./js/moment.js"></script>
   <script type="text/javascript" src="./js/moment-timezone.min.js"></script>
   <script type="text/javascript" src="./js/jquery.countdown.min.js"></script>
-  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinysort/2.3.6/jquery.tinysort.min.js"></script>-->
+  <script type="text/javascript" src="./js/tinysort.min.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
   <script type="text/javascript" src="./js/roulette.js"></script>
 </head>
